--- a/src/components/allBirds/allBirds.css
+++ b/src/components/allBirds/allBirds.css
@@ -16,7 +16,9 @@ body {
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: #f2f5f7;
+  background-color: #ffe2c2;
+  max-width: 100%;
+  max-height: auto;
 }
 
 .birds-container {
@@ -27,8 +29,9 @@ body {
 
 .birds-container .bird-card img {
   margin: 10px 0;
-  max-width: 100%;
-  height: auto;
+  max-width: 50%;
+  max-height: 300px;
+  object-fit: contain;
 }
 
 .birds-container .bird-card p {
@@ -50,4 +53,18 @@ body {
 .species {
   display: inline;
   width: 100px;
+}
+
+.navPages-allbirds{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	padding: 10px;
+  width: 100%;
+  background-color: #271600;
+  margin-top: 0;
+}
+
+#searchBird{
+  height:auto;
 }
