--- a/src/components/dataForm/DataForm.css
+++ b/src/components/dataForm/DataForm.css
@@ -8,7 +8,7 @@ form {
   border-radius: 5px;
   padding: 40px 30px 20px 20px;
   text-align: center;
-  background-color: lightblue;
+  background-color: #2d1f01;
   margin: 5px 100px 5px 100px;
 }
 
@@ -19,6 +19,7 @@ label {
   font-size: 22px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: right;
+  color: white;
 }
 
 input[type="text"],
@@ -28,11 +29,11 @@ textarea {
   height: 20px;
   padding: 5px;
   margin-bottom: 10px;
-  background-color: lightgray;
+  background-color: white;
 }
 
 input[type="submit"] {
-  background-color: #4caf50;
+  background-color: #826c3c;
   color: white;
   padding: 10px 20px;
   border: none;
